Make minor changes to the User Interface * Turn the dashboard carousel and profile tabs into components in order to prevent writing jQuery code in template. * Add a .content-wrap div to templates in order to create spacing with the navbar

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -9,60 +9,8 @@ $roboto-font-path: '../assets/';
 @import "./pages/_bookdetail.scss";
 @import "./pages/_profile.scss";
 @import "./pages/_mybooks.scss";
+@import "./pages/_index.scss";
 
-/*
-    =======================
-          INDEX-STYLE
-    =======================
-*/
-.main-content{
-    position: absolute;
-    height:100%;
-    width: 100%;
-    top:0;
-    left:0;
-    right: 0;
-    z-index: -99;
-    background-image: url('/assets/images/indexbg.jpg');
-    
+.content-wrap {
+    padding: 30px 0;
 }
-.modal {
-    z-index:999 !important;
-}
-.card-div{
-    margin-top:18%;
-    background-color: red;
-}
-
-#mycard-title {
-    font-size: 44px !important;
-    margin-bottom: 15px !important;
-}
-
-#mynav{
-    background-color: transparent;
-    box-shadow: none;
-    
-}
-
-#mynav-wrapper ul{
-    li{
-        a{
-            font-size: 22px;
-            margin-right: 25px;
-            background-color: #f74545;
-        } 
-    }
-} 
-
-#mynav-wrapper ul{
-    li{
-        padding: 15px;
-    }
-} 
-
-.blue-grey.darken-1 {
-    background-color: #f56868 !important;
-}
-
-
